# ted

./: Makefile  README  client.cpp  client.h  player.py
cpp/: README  README.md
cpp/game_io/: challenge_response.h  error_msg.cpp  error_msg.h  game_io.h  game_result.cpp  game_state.cpp  game_state.h  json_response.h  move_request.cpp  move_result.h  offer_challenge.h  play_card_response.h
cpp/json_socket/: json_socket.h
cpp/jsoncpp/: CMakeLists.txt  version.h.in
cpp/jsoncpp/src/: CMakeLists.txt
cpp/jsoncpp/src/jsontestrunner/: CMakeLists.txt
cpp/jsoncpp/src/lib_json/: CMakeLists.txt
cpp/jsoncpp/src/test_lib_json/: CMakeLists.txt
cpp/vs2012/: client.sln  client.vcxproj.filters
game_io/: Makefile  challenge_response.cpp  game_io.cpp  game_result.h  greeting.cpp  greeting.h  json_response.cpp  move_request.h  move_result.cpp  offer_challenge.cpp  play_card_response.cpp
json_socket/: Makefile  json_socket.cpp
jsoncpp/: FindJsonCpp.cmake
jsoncpp/include/json/: version.h
vs2012/: .gitignore  client.vcxproj
