# Source files to compile with executable
file(GLOB_RECURSE LIBJSONCPP_SOURCE_FILES *.cpp)

ADD_LIBRARY(json_cpp SHARED ${LIBJSONCPP_SOURCE_FILES})
SET_TARGET_PROPERTIES(json_cpp PROPERTIES VERSION ${JSON_CPP_VERSION} SOVERSION ${JSON_CPP_VERSION})

# Install instructions for this target
INSTALL(TARGETS json_cpp 
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)
